--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="js/sammy.js"></script>
 	
+	<!-- Include main javascript -->
+	<script src="js/main.js"></script>
+	
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -61,9 +64,9 @@
 		</div>
 		<!-- /.container -->
 	</nav>
-
-	<!-- Page Content -->
-	<div id="main" class="container">
+	
+	<!-- Main Page -->
+	<div id="main" class="container js-page hidden">
 
 		<div class="row">
 			<div class="col-lg-12 text-center">
@@ -86,15 +89,15 @@
 	<!-- /.container -->
 	
 	<!-- About page -->
-	<div id="about" class="container hidden">
+	<div id="about" class="container js-page hidden">
 		<div class="col-lg-12 text-center">
 			<h1>About This App</h1>
-			<p>This app was designed as a solution to the <a href="https://gist.github.com/generalassembly-wdi/bd1d8a399f259495ed56">GA Javascript Challenge</a>.</p>
+			<p>This app was designed as a solution to the <a target="_blank" href="https://gist.github.com/generalassembly-wdi/bd1d8a399f259495ed56">GA Javascript Challenge</a>.</p>
 		</div>
 	</div>
 	
 	<!-- Another page -->
-	<div id="page-2" class="container hidden">
+	<div id="page-2" class="container js-page hidden">
 		<div class="col-lg-12 text-center">
 			<h1>Another Page</h1>
 			<p>This page really serves no purpose.</p>
