--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	
 	<!-- Include main javascript -->
+	<script src="js/jquery.bbq.js"></script>
 	<script src="js/main.js"></script>
 	
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -71,7 +72,7 @@
 			<div class="col-lg-12 text-center">
 				<h1>Find Your Next Flick</h1>
 				<p class="lead">A search tool that browses the <a href="http://www.omdbapi.com/" target="_blank">Open Movie Database</a>.</p>
-				<form class="form-inline" role="form">
+				<form id="search-form" class="form-inline" role="form">
 					
 						<label class="control-label" for="t">Title:</label>
 						<input name="t" id="t" type="search" class="form-control" placeholder="Search for..." required autofocus />
