--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 						<label class="control-label" for="y">Year:</label>
 						<input name="y" id="y" type="text" class="form-control" pattern="[0-9]{4}" placeholder="2000" />
 						<input type="submit" class="form-control btn-primary" value="Search" />
+						<input type="reset" class="form-control" value="Clear" />
 					
 				</form>
 			</div>
