Added a nav link pointing back to the repo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 					<li>
 						<a href="#/page-2">Another Page</a>
 					</li>
+					<li>
+						<a href="https://github.com/kenaniah/wdi-javascript-challenge" target="_blank">Source Code</a>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
