Source code link now blurs after click

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<a href="#/page-2">Another Page</a>
 					</li>
 					<li>
-						<a href="https://github.com/kenaniah/wdi-javascript-challenge" target="_blank">Source Code</a>
+						<a class="js-blur" href="https://github.com/kenaniah/wdi-javascript-challenge" target="_blank">Source Code</a>
 					</li>
 				</ul>
 			</div>
