Changed the year's input type from text to numeric

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<label class="control-label" for="t">Title:</label>
 						<input name="t" id="t" type="search" class="form-control" placeholder="Search for..." required autofocus />
 						<label class="control-label" for="y">Year:</label>
-						<input name="y" id="y" type="text" class="form-control" pattern="[0-9]{4}" />
+						<input name="y" id="y" type="number" class="form-control" pattern="[0-9]{4}" />
 						<input type="submit" class="form-control btn-primary" value="Search" />
 						<input type="reset" class="form-control" value="Clear" />
 					
